@@ -1,3 +1,9 @@
+2005-07-20  Daniel Macks  <dmacks@netspace.org>
+
+	* Engine.pm: Overhaul cmd_cleanup: cmdline opts control what is
+	cleaned; move each type of cleaning into its own cleanup_*
+	function; implement --dry-run
+
 2005-07-19  Dave Vasilevsky  <vasi@users.sourceforge.net>
 
 	* Configure.pm: Forward-port the obsolete-mirrors handling.
